crates/review-buddy/tests/snapshots/refresh_state__rate_limit_note_dusk_160x40.snap
---
source: crates/review-buddy/tests/refresh_state.rs
expression: text(& mut app)
---
 review buddy  ·  live · 2 sources · 2 changes                                                                                                             Dusk
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ acme/web#1 ────────────────────────────────────────────────────────────────────────╮
│▌ ● All               2 ││  Waiting on you · 2                          ││ Add retry to sync                                                                  │
│    every source        ││▌ ● Add retry to sync                      1h ││ mira wants feat → main                                                             │
│  ● work              1 ││▌ GH web#1 · mira · review requested          ││ +4 −2 · 1 file · opened 2h ago                                                     │
│    paused until 10:58  ││  ● Fix the flaky upload test              1h ││                                                                                    │
│  ● oss               1 ││  GH web#2 · mira · review requested          ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    gitlab.com          ││                                              ││                                                                                    │
│                        ││  ── That's everything.                       ││  Overview   Files 1   Checks   Conversation                                        │
│  Show  s to change     ││  2 in this view.                             ││ ────────────────────────────────────────────────────────────────────────────────── │
│  [x] reviewing         ││                                              ││ github.com is rate limiting requests.                                              │
│  [x] assigned          ││                                              ││ The limit resets in about 16 minutes. Press r to try again then.                   │
│  [x] authored          ││                                              ││                                                                                    │
│  [ ] drafts            ││                                              ││                                                                                    │
│  [ ] noise             ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                       ╭──────────────────────────────────────────────────────────╮ │
│                        ││                                              ││                       │! work: github.com is rate limiting requests. The limit…  │ │
│                        ││                                              ││                       ╰──────────────────────────────────────────────────────────╯ │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit                                                                                refreshed 10:42
